tests/diagnostics/return_outside_fn.kal
# `return` is only valid inside a function body.
return 5;
